book overflowing fix.

--- a/src/components/common/Book/Book.module.scss
+++ b/src/components/common/Book/Book.module.scss
@@ -4,6 +4,7 @@
 
 .oneBook {
 	padding: 20px;
+	max-width: 40vw;
 
 	&.borrowed {
 		.cover {
